# tds-p1-telegram-bot

./: .env.example  .gitignore  README.md  agent.py  bot.py  config.py  logger.py  pyproject.toml  python_runner.py  test_agent_mosmi.py  test_tools.py  tools.py
deploy/: install.sh  tds-p1-bot.service
