[project]
name = "tds-p1-telegram-bot"
version = "0.1.0"
description = "Data-analyst Telegram bot for TDS 2026 May P1 Q5."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=0.9",
    "google-cloud-storage>=2.18",
    "httpx>=0.27",
    "pandas>=2.0",
    "pypdf>=5.0",
    "python-dotenv>=1.0",
    "python-telegram-bot>=21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
